website version 0.2 animada

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </header>
     <section>
         <div class="banner">
-            <img src="../proyecto_microcerveceria-nicolas bustamante/img/cervezaBanner.jpg" alt="cerveza">
+            <img src="../proyecto_microcerveceria-nicolas bustamante/img/comidaBanner.jpg" alt="barra">
         </div>
     </section>
     
