--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--KEYWORDS Y DESCRIPCION-->
+    <meta name="description" content="cerveceria artesanal argentina con gran variedad de cerbezas artesanales y bares para disfrurtar de la vida. ">
+    <meta name="keywords" content="cerveveza el nogal, cerveza artesanal, bares, cerveza, beer,">
+    <!--fin KEYWORDS Y DESCRIPCION-->
     <!--estilos BS online-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--fin estilos BS online-->
@@ -12,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./estilos/css.css"/>
-    <title>cerveceria el nogal</title>
+    <title>inicio cerveceria el nogal</title>
 </head>
 
 <body>
@@ -70,20 +74,20 @@
     </section>
     
     <div class="footer1">
-        <h2>REDES SOCIALES</h2>
+        <h2 class="ti1">REDES SOCIALES</h2>
         <a href="https://www.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="facebook" class="RD"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="instagram" class="RD"></a>
         <a href="https://www.whatsapp.com/" target="_blank"><img src="./img/whatsapp.png" alt="whatsapp" class="RD"></a>
     </div>
     <div class="itemsFooter">
-     <H2>CONTACTOS</H2>
+     <H2 class="ti2">CONTACTOS</H2>
      <ul>
          <li>tel: 1245651566161</li>
          <li>correo: cervezanogal4541@gmail.com</li> 
      </ul>
      </div>
      <div class="itemsFooter">
-     <H2>DIRECCIONES DE BARES</H2>
+     <H2 class="ti3">DIRECCIONES DE BARES</H2>
      <ul>
          <li>CABA: avenida drectorio 15615</li>
          <li>CORDOBA: guemes45314</li>
